[delivers #184401345] Added method updateById
